# forayer

./: .gitignore  CHANGELOG.md  LICENSE  NEW_IN_THIS_RELEASE.md  README.md  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: main.yml  pr.yml  publish.yml  quality.yml  tests.yml
docs/: conf.py  index.rst
docs/source/: apidoc.rst  installation.rst  user_guide.rst
docs/source/guide/: entity_resolution.rst  index.rst  knowledge_graphs.rst
forayer/: __init__.py
forayer/datasets/: __init__.py  base_dataset.py  oaei_kg.py  open_ea.py
forayer/evaluation/: __init__.py  er_metrics.py
forayer/exploration/: attributes.py
forayer/input_output/: __init__.py  from_to_gradoop.py  from_to_open_ea.py  from_to_rdf.py
forayer/io/: from_to_gradoop.py  from_to_open_ea.py  from_to_semantic.py  open_ea.py
forayer/knowledge_graph/: __init__.py  clusters.py  er_task.py  graph_based_clustering.py  kg.py  kg_er.py
forayer/transformation/: __init__.py  word_embedding.py
forayer/utils/: cleaning_help.py  dict_help.py  prefix_help.py  random_help.py
tests/: test_utils.py
tests/datasets/: test_oaei_kg.py  test_open_ea.py
tests/evaluation/: test_er_metrics.py
tests/io/: test_from_open_ea.py  test_from_to_gradoop.py  test_from_to_rdf.py  test_from_to_semantic.py
tests/knowledge_graph/: test_clusters.py  test_er_task.py  test_kg.py  test_kg_er.py
tests/test_data/: test.ttl
tests/test_data/OAEI_KG_Track/: memoryalpha.xml  memorybeta.xml  ref-memoryalpha-memorybeta.xml
tests/test_data/gradoop_csv/: edges.csv  metadata.csv  vertices.csv
tests/transformation/: test_word_embedding.py
