[tool.poetry]
name = "forayer"
version = "0.3.4"
description = "First aid utilies for knowledge graph exploration with an entity centric approach"
authors = ["Daniel Obraczka <obraczka@informatik.uni-leipzig.de>"]
license = "MIT"
readme = "README.md"
keywords = ["knowledge graph", "entity resolution"]
repository = "https://github.com/dobraczka/forayer"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dobraczka/forayer/issues"
"Source" = "https://github.com/dobraczka/forayer"
"Documentation" = "https://forayer.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.7.1"
tqdm = "4.*"
importlib-metadata = "^4.5.0;python_version<3.8"
sphinx = {version = "^4.0.2", optional = true}
insegel = {version = "^1.1.0", optional = true}
wget = "^3.2"
gensim = "^4.0.1"
pandas = "^1.3.2"
plotly = "^5.2.1"
rdflib = "^6.0.0"
joblib = "^1.0.1"
networkx = "^2.6.2"
scikit-learn = "^1.0.1"


[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
mypy = "^0.800"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
tox = "^3.21.4"
black = "^21.6b0"
pyproject-flake8 = "^0.0.1-alpha.2"
flake8-eradicate = "^1.0.0"
flake8-isort = "^4.0.0"
flake8-docstrings = "^1.6.0"
flake8-debugger = "^4.0.0"
flake8-comprehensions = "^3.5.0"
flake8-print = "^4.0.0"
typer = "^0.3.2"
flake8-bugbear = "^21.4.3"
flake8-simplify = "^0.14.1"
insegel = "^1.1.0"
numpydoc = "^1.1.0"


[tool.poetry.extras]
docs = ["sphinx", "insegel"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "E203, E266, E501, W503, F403, F401, B950"
max-line-length = 88
max-complexity = 18
select = "B,C,C4,E,F,W,T4,B9"
count = "true"
show-source = "true"
statistics = "true"
docstring_style = "numpy"
strictness = "full"

[tool.black]
line-length = 88
experimental-string-processing = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
