[tool.poetry]
name = "forayer"
version = "0.4.4"
description = "First aid utilies for knowledge graph exploration with an entity centric approach"
authors = ["Daniel Obraczka <obraczka@informatik.uni-leipzig.de>"]
license = "MIT"
readme = "README.md"
keywords = ["knowledge graph", "entity resolution"]
classifiers = ["Development Status :: 4 - Beta", "Programming Language :: Python", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3 :: Only"]
repository = "https://github.com/dobraczka/forayer"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dobraczka/forayer/issues"
"Source" = "https://github.com/dobraczka/forayer"
"Documentation" = "https://forayer.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
tqdm = "^4.0"
sphinx = {version = "^4.0.2", optional = true}
insegel = {version = "^1.1.0", optional = true}
numpydoc = {version = "^1.1.0", optional = true}
wget = "^3.2"
gensim = "^4.2.0"
pandas = "^1.3.2"
plotly = "^5.2.1"
rdflib = "^6.0.0"
joblib = "^1.2.0"
networkx = "^2.6.2"
scikit-learn = "^1.0.1"
pystow = "^0.3"
numpy = "^1.22"


[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
mypy = "^0.960"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pyproject-flake8 = "^0.0.1a4"
flake8-eradicate = "^1.2.1"
flake8-isort = "^4.1.1"
flake8-debugger = "^4.1.2"
flake8-comprehensions = "^3.10.0"
flake8-print = "^5.0.0"
nox-poetry = "^1.0.0"
black = "^22.3.0"
pytest-mock = "^3.7.0"
pyroma = {git = "https://github.com/CAM-Gerlach/pyroma.git", rev = "improve-pep-517-approach"}
pydocstyle = "^6.1.1"
flake8-bugbear = "^22.7.1"
unittest-templates = "^0.1.0"


[tool.poetry.extras]
docs = ["sphinx", "insegel"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "E203, E266, E501, W503, F403, F401, C408, D107"
max-line-length = 88
max-complexity = 18
count = "true"
show-source = "true"
statistics = "true"
docstring_style = "numpy"
strictness = "full"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
reverse_relative = true

[tool.pytest.ini_options]
markers = [
    "slow: mark test as slow"
]
